sumo/tests/sumo/errors/action_step_fractional_warning/errors.sumo
Warning: The parameter action-step-length must be a non-negative multiple of the simulation step-length. Parsing given value (1.2 s.) to nearest positive multiple (=1 s.)
Warning: The parameter action-step-length must be a non-negative multiple of the simulation step-length. Parsing given value (2.4 s.) to nearest positive multiple (=2 s.)
